2005-09-19  David Grellscheid  <David.Grellscheid@durham.ac.uk>

	* PDF/*: Removed obsolete MRST99_1.*, renamed MRST.so to HwMRST.so

	* Helicity/Vertex/RSModel/*, Models/RSModel/*: Made RS model
	dynamically loadable.
	
2005-09-19  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Utilities/Interpolator.cc (Repository): minor bug fixes

	* Hadronization/PartonicHadronizer.cc (Repository): minor bug fixes

	* Utilities/Math.h (Repository): added math namesapce for mathematical
	functions and included the dilog from FORTRAN HERWIG.

2005-09-15  David Grellscheid <David.Grellscheid@durham.ac.uk>

	* ** multiple files **: small changes to reduce compile warnings 
	when extra warning flags are enabled.

2005-09-15  Pete's account  <Peter.Richardson@durham.ac.uk>

	* Doc/refman.conf (Repository): changes due change in name of repository

2005-09-15  Peter Richardson  <Peter.Richardson@durham.ac.uk>

	* Decay/WeakCurrents/FourPionNovosibirskCurrent.cc (Repository): minor bug fixes

2005-09-13  Peter Richardson <Peter.Richardson@durham.ac.uk>

	* Decay: changes to many classes due to the new base class 
	
	* Hadronization changes to tidy up the PartonicHadronizer and allow the
	hadronization to produce off-shell particles.
	
	* Decay/HwDecayerBase.h (Repository): added new base class for decayers including
	the Initialize feature of the DecayIntegrator and dataBaseOutput so this can be
	used for classes not built on DecayIntegrator.

	* PDT/GenericWidthGenerator.h: changes so that the mass generator only includes
	the numerator factor when generating a mass without the weight to avoid biases
	towards high masses.

	* Decay/DecayConfig.h (Repository): this was really the .fh file for Hw64Decayer
	and has been renamed as such.

	* Decay/ExampleDecayer (Repository): removed the ExampleDecayer as it served
	little purpose and should be replaced by information on the Wiki.

2005-09-08  Peter Richardson  <Peter.Richardson@durham.ac.uk>
